create post for event list(/event_list endpoint)
