# server/static/OpenAPI.yaml
@@ -15,6 +15,8 @@ servers:
 tags:
   - name: get requests
     description: getting information from tables
+  - name: create data requests
+    description: getting information from tables
 paths:
   /event_list:
     get:
@@ -35,6 +37,54 @@ paths:
                       $ref: '#/components/schemas/EventList'
         '404':
           description: No events found
+    post:
+      tags:
+        - create data requests
+      summary: create new event
+      requestBody:
+        description: Create a new pet in the store
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                  format: int64
+                calendar_id:
+                  type: integer
+                  format: int64
+                event_type_id:
+                  type: integer
+                  format: int64
+                c_start_date:
+                  type: string
+                  format: date
+                c_end_date:
+                  type: string
+                  format: date
+                group_id:
+                  type: integer
+                  format: int64
+                student_id:
+                  type: integer
+                  format: int64
+                staff_id:
+                  type: integer
+                  format: int64
+      responses:
+        '201':
+          description: Event created
+        '400':
+          description: "Missing arguments"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Missing argument: {arg}"
   /event_type:
     get:
       tags:
